--- a/scss/inicio.scss
+++ b/scss/inicio.scss
@@ -167,4 +167,8 @@
         border-radius: 10px;
         box-shadow: 5px 5px 10px rgb(109, 108, 108);
     }
+    .seachHeader{
+        display: flex;
+        flex-direction: row;
+    }
 }
