--- a/scss/mediaquerie.scss
+++ b/scss/mediaquerie.scss
@@ -171,7 +171,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        overflow-x: hidden;
         width: 100%;
     }
 
